# openet_download

./: README.md  main_rum.ipynb  pyproject.toml
examples/: interactive.py  quickstart.py
outputs/: OpenET_DisALEXI_ET_daily_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_DisALEXI_ET_monthly_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_Ensemble_ET_daily_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_Ensemble_ET_monthly_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_PT-JPL_ET_daily_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_PT-JPL_ET_monthly_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_SIMS_ET_daily_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_SIMS_ET_monthly_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_SSEBop_ET_daily_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_SSEBop_ET_monthly_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_eeMETRIC_ET_daily_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_eeMETRIC_ET_monthly_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_geeSEBAL_ET_daily_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv  OpenET_geeSEBAL_ET_monthly_2024-10-01_to_2025-09-30_lon-120.41416_lat37.37500.csv
src/openet_download/: __init__.py  api.py  download.py  exceptions.py  geometry.py  io.py  plot.py
src/openet_download.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
